--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beer",
-  "description": "Sample beer app",
+  "description": "Beer app",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -8,10 +8,13 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.10.0",
+    "cookie-parser": "~1.0.0",
     "ejs": "^1.0.0",
     "express": "~4.1.1",
     "mongoose": "^3.8.20",
     "passport": "^0.2.1",
-    "passport-http": "^0.2.2"
+    "passport-http": "^0.2.2",
+    "method-override": "~1.0.0",
+    "express-session": "~1.0.0"
   }
 }
