--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongoose": "^3.8.20",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
+    "passport-local" : "~0.1.6", 
+    "passport-google-oauth" : "~0.1.5",
     "method-override": "~1.0.0",
     "express-session": "~1.0.0"
   }
