--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "passport-local" : "~0.1.6", 
     "passport-google-oauth" : "~0.1.5",
     "method-override": "~1.0.0",
-    "express-session": "~1.0.0"
+    "express-session": "~1.0.0",
+    "connect-flash": "~0.1.1"
   }
 }
