--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport-google-oauth" : "~0.1.5",
     "method-override": "~1.0.0",
     "express-session": "~1.0.0",
+    "express-ejs-layouts" : "1.1.0",
     "connect-flash": "~0.1.1"
   }
 }
