--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.10.0",
+    "brewerydb-node": "0.0.1",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
     "ejs": "^1.0.0",
     "express": "~4.1.1",
+    "express-ejs-layouts": "1.1.0",
+    "express-session": "~1.0.0",
+    "method-override": "~1.0.0",
     "mongoose": "^3.8.20",
     "passport": "^0.2.1",
+    "passport-google-oauth": "~0.1.5",
     "passport-http": "^0.2.2",
-    "passport-local" : "~0.1.6", 
-    "passport-google-oauth" : "~0.1.5",
-    "method-override": "~1.0.0",
-    "express-session": "~1.0.0",
-    "express-ejs-layouts" : "1.1.0",
-    "connect-flash": "~0.1.1"
+    "passport-local": "~0.1.6"
   }
 }
