--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.10.0",
     "brewerydb-node": "0.0.1",
+    "compression": "^1.3.0",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
     "ejs": "^1.0.0",
     "express": "~4.1.1",
     "express-ejs-layouts": "1.1.0",
     "express-session": "~1.0.0",
-    "flickrapi": "^0.3.28",
     "method-override": "~1.0.0",
     "mongoose": "^3.8.20",
     "passport": "^0.2.1",
